--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   I am a software developer in Austin, Texas, USA. 
   I primarily work on iOS and Android, with a particular focus on testing.
 copyright: Copyright Ben Boral © 2020, All Rights Reserved
-baseurl: "/blog"
+baseurl: "/"
 url: "https://www.benboral.com"
 
 # Build settings
