--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Ben's Software Development Blog
 email: ben@benboral.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am a software developer in Austin, Texas, USA. 
-  I primarily work on iOS and Android, with a particular focus on testing.
+  I have >10 years background in iOS and Android, with a particular focus on testing, and I currently work at bitrise.io as a sales engineer.
 copyright: Copyright Ben Boral © 2020, All Rights Reserved
 baseurl: "/"
 url: "https://www.benboral.com"
